                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-04-2006 changed: content of zip archives is converted from user charset to UTF-8 now
 - 12-04-2006 fixed: [ 1467762 ] Incorrect flash type shown on TSOP flashed boxes
 - 12-04-2006 fixed: redundant vis empty albumart update.
 - 12-04-2006 fixed: ttf font's wouldn't show up in subtitle font selection.
 - 11-04-2006 fixed: hopefully all issues caused by the extension handling and code cleanup [10-04-2006] should have been fixed
 - 11-04-2006 changed: albumart passes c_str to visualistion instead of string object
 - 11-04-2006 fixed: ccx/xbmsp shares
 - 11-04-2006 fixed: MyPrograms contextmenu wouldn't display launch options for xbe's
 - 11-04-2006 fixed: [ 1467935 ] Unnecessary logging of ERROR: unable to load Startup.xml
 - 10-04-2006 fixed: files/directories with url encoding strings such as %20 in them would fail to work over smb
 - 10-04-2006 changed: handling of file extension + code cleanup
 - 10-04-2006 added: if album info from the currently playling album is downloaded it will update the music overlay with the new cover
 - 10-04-2006 fixed: nav sounds are gone after skin change
 - 10-04-2006 fixed: use correct subnet mask for samba instead of hardcoded 255.255.255.0
 - 10-04-2006 fixed: xbmc would easily read garbage if asked to read text files from dvd.
 - 09-04-2006 changed: Added free memory logging to logfile and removed current date (time is still there)
 - 09-04-2006 updated: chinese (simple) langugae file (Thanks to hibaby)
 - 09-04-2006 updated: Hebrew language file (Thnx to vgs)
 - 09-04-2006 added: xml header with encoding to language files. Language files now support UTF-8